WEVENTS: avoid shifting floppy icon
Display it only once the link has been translated!

--- a/css/wevents.css
+++ b/css/wevents.css
@@ -33,6 +33,9 @@
 	height: 50vh;
 	overflow-y: scroll;
 }
+#we-floppy {
+	visibility: hidden;
+}
 @media (max-width: 799px) {
 	#we-container {
 		width: 100%;
